See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.50.00

09.12.30 BJH  Release 10.49.00

              Add pnmmercator.

              pnmconvol: Add -matrix, -matrixfile.

              pambayer: add -nointerpolate.

              jpeg2ktopam: Work with JP2 input as well as JPC.

              pamscale: Work on multi image stream.

              ppmrainbow: Make new directory for temporary files.
              Prevents interference by other user who shares the main
              temporary file directory.

              libnetpbm: When reading plain format PNM with PAM routines,
              validate pixel against maxval (necessary for integer non-overrun
              guarantees).

              pnmsmooth: change -dump option to output a new pnmconvol
              -matrix option instead of a PGM file (because pnmsmooth now
              uses -matrix).

              pnmtofiasco: fix bug: doesn't work with Standard Input.

              pnmsmooth: fix incorrect call to pm_system_lp() that makes
              it never work (but it wouldn't anyway because pm_system_lp()
              was broken -- see below).

              pm_system*: fix various bugs making it never work.

              xpmtoppm: fix wild pointer with color index > 127.

              xpmtoppm: fix wild pointer when the input has a color index
              value that is too large to be consistent with the number of
              colors and bytes per pixel.

              pamtouil: fix crash when -name option doesn't contain an
              underscore.
              
              pamtosvg: fix some bug with unset Z coordinate.

              pnmtofiasco, fiascotopnm: fix bug on bigendian machine.

              pngtopam: use png_create_read_struct() instead of
              png_create_write_struct().  Broken since 10.48.

              configure: advise if adding -lz -lm fixes libpng link problem.
