@@ -6,6 +6,11 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.50.00
 
+              palmtopnm: fix incorrect "PALM_DIRECT_COLOR_FLAG is not valid
+              for version 3 encoding type" failure.
+
+              palmtopnm: fix incorrect output with version 3 direct color.
+
 09.12.30 BJH  Release 10.49.00
 
               Add pnmmercator.
